--- a/notebooks/train-yolov8-object-detection-on-custom-dataset.ipynb
+++ b/notebooks/train-yolov8-object-detection-on-custom-dataset.ipynb
@@ -66,14 +66,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y8cDtxLIBHgQ",
-        "outputId": "d0d76d5b-2ef2-4276-97ac-56a9b08df760"
+        "outputId": "5c9c7537-126d-43ca-a1e1-ddd082529e1a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Thu Jul 31 02:44:22 2025       \n",
+            "Thu Jul 31 03:00:01 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -108,7 +108,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CjpPg4mGKc1v",
-        "outputId": "4e17f1da-ba10-4ff2-a0ab-169c334eb90d"
+        "outputId": "6855f0b1-2a2f-4e20-c493-6eaad400c21a"
       },
       "outputs": [
         {
@@ -144,7 +144,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tdSMcABDNKW-",
-        "outputId": "e38658c1-c099-401c-860d-d66fe61c85f8"
+        "outputId": "e1e85da3-5ae1-41d4-edc4-ff067d4b973f"
       },
       "outputs": [
         {
@@ -152,7 +152,7 @@
           "name": "stdout",
           "text": [
             "Ultralytics YOLOv8.2.103 🚀 Python-3.11.13 torch-2.6.0+cu124 CUDA:0 (Tesla T4, 15095MiB)\n",
-            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 42.6/112.6 GB disk)\n"
+            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 42.7/112.6 GB disk)\n"
           ]
         }
       ],
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "VOEYrlBoP9-E"
       },
@@ -238,13 +238,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FDbMt_M6PiXb",
-        "outputId": "9073d045-e10c-49b5-c3f8-990a0482cbb7"
+        "outputId": "665423b0-7152-4319-8030-68358a98ecbd"
       },
       "outputs": [
         {
@@ -252,16 +252,13 @@
           "name": "stdout",
           "text": [
             "/content\n",
-            "Downloading https://github.com/ultralytics/assets/releases/download/v8.2.0/yolov8n.pt to 'yolov8n.pt'...\n",
-            "100% 6.25M/6.25M [00:00<00:00, 96.3MB/s]\n",
             "Ultralytics YOLOv8.2.103 🚀 Python-3.11.13 torch-2.6.0+cu124 CUDA:0 (Tesla T4, 15095MiB)\n",
             "YOLOv8n summary (fused): 168 layers, 3,151,904 parameters, 0 gradients, 8.7 GFLOPs\n",
             "\n",
-            "Downloading https://media.roboflow.com/notebooks/examples/dog.jpeg to 'dog.jpeg'...\n",
-            "100% 104k/104k [00:00<00:00, 91.4MB/s]\n",
-            "image 1/1 /content/dog.jpeg: 640x384 1 person, 1 car, 1 dog, 62.3ms\n",
-            "Speed: 5.7ms preprocess, 62.3ms inference, 373.5ms postprocess per image at shape (1, 3, 640, 384)\n",
-            "Results saved to \u001b[1mruns/detect/predict\u001b[0m\n",
+            "Found https://media.roboflow.com/notebooks/examples/dog.jpeg locally at dog.jpeg\n",
+            "image 1/1 /content/dog.jpeg: 640x384 1 person, 1 car, 1 dog, 41.4ms\n",
+            "Speed: 3.1ms preprocess, 41.4ms inference, 151.8ms postprocess per image at shape (1, 3, 640, 384)\n",
+            "Results saved to \u001b[1mruns/detect/predict2\u001b[0m\n",
             "💡 Learn more at https://docs.ultralytics.com/modes/predict\n"
           ]
         }
@@ -273,14 +270,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
         },
         "id": "LyopYpK1TQrB",
-        "outputId": "3d7866a5-b8c3-46a2-8728-ba45086eabb1"
+        "outputId": "f7f377fb-cea3-472b-a6c4-ea73106ab98f"
       },
       "outputs": [
         {
@@ -303,12 +300,11 @@
               "height": 600
             }
           },
-          "execution_count": 9
+          "execution_count": 7
         }
       ],
       "source": [
         "%cd {HOME}\n",
-        "from IPython.display import Image\n",
         "Image(filename='runs/detect/predict/dog.jpeg', height=600)"
       ]
     },
@@ -328,22 +324,20 @@
       "execution_count": 10,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 158
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Rx9NWF-sVN6Y",
-        "outputId": "4efc750e-1b20-4d72-8ce0-51b0f2f1aa11"
+        "outputId": "5cb889f1-91bf-4547-b6ff-319673fc9f9b"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'YOLO' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-392492458.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mYOLO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{HOME}/yolov8n.pt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'https://media.roboflow.com/notebooks/examples/dog.jpeg'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'YOLO' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Found https://media.roboflow.com/notebooks/examples/dog.jpeg locally at dog.jpeg\n",
+            "image 1/1 /content/dog.jpeg: 640x384 1 person, 1 car, 1 dog, 51.6ms\n",
+            "Speed: 1.7ms preprocess, 51.6ms inference, 139.9ms postprocess per image at shape (1, 3, 640, 384)\n"
           ]
         }
       ],
@@ -354,16 +348,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kAi4PvrItTCf",
-        "outputId": "18169e60-71d8-47c8-d4b7-6e71d40897d3"
+        "outputId": "b407d1d3-7911-4c71-a8a3-331739304ee5"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([[   0.0000,  314.4717,  625.0754, 1278.1946],\n",
@@ -371,9 +366,8 @@
               "        [ 633.2291,  719.5391,  701.0538,  786.0336]], device='cuda:0')"
             ]
           },
-          "execution_count": 8,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 11
         }
       ],
       "source": [
@@ -382,24 +376,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HqT2M01K1LUb",
-        "outputId": "22e54966-7c1f-4c14-b56c-b0e7b258d62b"
+        "outputId": "1cefef3e-250d-4302-adc9-c162fa0e19a5"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([0.7271, 0.2907, 0.2846], device='cuda:0')"
             ]
           },
-          "execution_count": 9,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 12
         }
       ],
       "source": [
@@ -408,24 +402,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKIwJ5yw1PMb",
-        "outputId": "587ad6fc-d6fb-4481-b003-1c6d49b0c896"
+        "outputId": "8e8094fb-9ac1-4c94-c7a4-1c90b0afd0cd"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([ 0., 16.,  2.], device='cuda:0')"
             ]
           },
-          "execution_count": 10,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 13
         }
       ],
       "source": [
